--- a/projects/movies/src/app/app-shell/account-menu/account-menu.component.html
+++ b/projects/movies/src/app/app-shell/account-menu/account-menu.component.html
@@ -1,9 +1,9 @@
-<ng-container *rxIf="loggedIn$; else guest">
+<ng-container *rxIf="loggedIn.state$; else guest">
   <div><a [routerLink]="['account/list/create']">Create New List</a></div>
   <div><a [routerLink]="['account/my-lists']">My Lists</a></div>
   <div>
     <a
-      (click)="ui.signOut($event)"
+      (click)="signOut()"
       title="sign out"
       [routerLink]="'/list/category/popular'"
     >
@@ -14,6 +14,6 @@
 <ng-template #guest>
   <div>Guest Profile</div>
   <div>
-    <a (click)="ui.signIn($event)" title="sign in"> Login </a>
+    <a (click)="signIn()" title="sign in"> Login </a>
   </div>
 </ng-template>
